DEV6_Componentslist/objects/Course__c.object
<CustomObject>
    <fields>
        <fullName>AccountKey__c</fullName>
        <label>AccountKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_information__c</fullName>
        <inlineHelpText>More information like drop in Category</inlineHelpText>
        <label>Additional information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Antenatal_Sessions__c</fullName>
        <label>Antenatal Sessions</label>
        <summaryFilterItems>
            <field>Session__c.Session_Type__c</field>
            <operation>equals</operation>
            <value>Antenatal</value>
        </summaryFilterItems>
        <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Available_Places__c</fullName>
        <formula>Places__c - Booked_Places__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available Places</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birth_Partners_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Birth Partners Only?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Booked_Places__c</fullName>
        <label>Booked Places</label>
        <summaryFilterItems>
            <field>Booking__c.Status__c</field>
            <operation>equals</operation>
            <value>Enquiry, Reserved, Confirmed</value>
        </summaryFilterItems>
        <summaryForeignKey>Booking__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Booking_Cost_Received__c</fullName>
        <formula>Total_Booking_Cost__c  -  Outstanding_Booking_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Cost Received</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Booking_Cost__c</fullName>
        <formula>Total_Booking_Cost__c  -  Outstanding_Booking_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Booking Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Branch</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Please select the branch record</errorMessage>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Branch</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Course (Branch)</relationshipLabel>
        <relationshipName>Course</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BreakEven_Cost__c</fullName>
        <label>BreakEven Cost</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Break_length__c</fullName>
        <label>Break length</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Breastfeeding_Sessions__c</fullName>
        <label>Breastfeeding Sessions</label>
        <summaryFilterItems>
            <field>Session__c.Session_Type__c</field>
            <operation>equals</operation>
            <value>Breastfeeding</value>
        </summaryFilterItems>
        <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low bookings - 0 bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 1 booking</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 2 bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 3 bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - 4 or more bookings</fullName>
                </value>
                <value>
                    <fullName>Low bookings - client not happy with small group size</fullName>
                </value>
                <value>
                    <fullName>Practitioner on time out - no replacement available</fullName>
                </value>
                <value>
                    <fullName>Practitioner resigned - no replacement available</fullName>
                </value>
                <value>
                    <fullName>Practitioner withdrew - no LtP</fullName>
                </value>
                <value>
                    <fullName>Practitioner withdrew - other</fullName>
                </value>
                <value>
                    <fullName>Newly Qualified practitioner withdrew - no LtP</fullName>
                </value>
                <value>
                    <fullName>Newly Qualified practitioner withdrew - other</fullName>
                </value>
                <value>
                    <fullName>Over capacity</fullName>
                </value>
                <value>
                    <fullName>Service withdrawn</fullName>
                </value>
                <value>
                    <fullName>Course added in error</fullName>
                </value>
                <value>
                    <fullName>Private sessions cancelled by client</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancelled_On__c</fullName>
        <label>Cancelled On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContactKey__c</fullName>
        <label>ContactKey</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Couples_Allowed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Couples Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Couples_Count__c</fullName>
        <label>Couples Count</label>
        <summaryFilterItems>
            <field>Booking__c.Attendees__c</field>
            <operation>equals</operation>
            <value>Couples</value>
        </summaryFilterItems>
        <summaryForeignKey>Booking__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Course_Category__c</fullName>
        <label>Course Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Identifier__c</fullName>
        <label>Course Identifier</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Index__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Course Index</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antenatal</fullName>
                </value>
                <value>
                    <fullName>Postnatal</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding</fullName>
                </value>
                <value>
                    <fullName>Drop-ins</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Reference__c</fullName>
        <formula>TEXT(PSA_Office__c) + &apos;/&apos; +  Name</formula>
        <label>Course Reference</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Course_Risk__c</fullName>
        <description>Course is at risk when BreakEvent cost is grater than Booking cost</description>
        <formula>AND(NOT(ISPICKVAL(Status__c , &quot;Draft&quot;)),BreakEven_Cost__c  &gt;  Booking_Cost_Received__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Course Risk</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course_Sub_Category__c</fullName>
        <label>Course Sub Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Course_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>1A</fullName>
                </value>
                <value>
                    <fullName>1B</fullName>
                </value>
                <value>
                    <fullName>1C</fullName>
                </value>
                <value>
                    <fullName>2A</fullName>
                </value>
                <value>
                    <fullName>2B</fullName>
                </value>
                <value>
                    <fullName>2C</fullName>
                </value>
                <value>
                    <fullName>3A</fullName>
                </value>
                <value>
                    <fullName>3B</fullName>
                </value>
                <value>
                    <fullName>3C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Course_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Early Days (postnatal)</fullName>
                </value>
                <value>
                    <fullName>NCT Signature antenatal</fullName>
                </value>
                <value>
                    <fullName>NCT Baby Massage</fullName>
                </value>
                <value>
                    <fullName>NCT antenatal refresher</fullName>
                </value>
                <value>
                    <fullName>NCT Essentials antenatal</fullName>
                </value>
                <value>
                    <fullName>Twins and Multiples Workshop</fullName>
                </value>
                <value>
                    <fullName>Yoga for Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Waterbirth</fullName>
                </value>
                <value>
                    <fullName>Introducing Solid Foods Workshop</fullName>
                </value>
                <value>
                    <fullName>NCT Parent</fullName>
                </value>
                <value>
                    <fullName>NCT Mother and Baby Yoga</fullName>
                </value>
                <value>
                    <fullName>Drop in</fullName>
                </value>
                <value>
                    <fullName>One to One</fullName>
                </value>
                <value>
                    <fullName>Combined Antenatal and Early Days (Postnatal)</fullName>
                </value>
                <value>
                    <fullName>Mantenatal</fullName>
                </value>
                <value>
                    <fullName>Birth and Beyond Antenatal</fullName>
                </value>
                <value>
                    <fullName>Early Pregnancy</fullName>
                </value>
                <value>
                    <fullName>Caesarean Workshop</fullName>
                </value>
                <value>
                    <fullName>Homebirth Workshop</fullName>
                </value>
                <value>
                    <fullName>Breathing and Relaxation</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding – Antenatal</fullName>
                </value>
                <value>
                    <fullName>Breastfeeding – Postnatal</fullName>
                </value>
                <value>
                    <fullName>Relax, Stretch &amp; Breathe</fullName>
                </value>
                <value>
                    <fullName>Twins and Multiples</fullName>
                </value>
                <value>
                    <fullName>Introducing Solid Foods</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_key__c</fullName>
        <label>CourseKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DayTime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DayTime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>TEXT(Course_Type__c) + &apos; &apos; +  Target_Group__c</formula>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration_Formatted__c</fullName>
        <formula>TEXT(FLOOR(Duration__c)) &amp; &apos; hours &apos; &amp; IF((Duration__c - FLOOR(Duration__c)) &gt; 0, &apos;and &apos; &amp; TEXT((Duration__c - FLOOR(Duration__c)) * 60) &amp; &apos; minutes&apos;, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Duration Formatted</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <inlineHelpText>Hours</inlineHelpText>
        <label>Duration</label>
        <summarizedField>Session__c.Duration__c</summarizedField>
        <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <summarizedField>Session__c.End__c</summarizedField>
        <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Evening__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Evening</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expected_Loss__c</fullName>
        <label>Expected Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <label>Standard Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <label>Individual fee</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Maximum_Places_Per_Course__c</fullName>
        <formula>Practitioner__r.Maximum_Places_Per_Course__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Maximum Places Per Course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Men_only__c</fullName>
        <label>Men only?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>CARE N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outstanding_Booking_Cost__c</fullName>
        <label>Outstanding Booking Cost</label>
        <summarizedField>Booking__c.Outstanding_Amount__c</summarizedField>
        <summaryForeignKey>Booking__c.Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>PSAOffice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSA Office</label>
        <referenceTo>PSA_Office__c</referenceTo>
        <relationshipLabel>Course (PSA Office)</relationshipLabel>
        <relationshipName>Course1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PSA_Branch__c</fullName>
        <label>PSA Branch</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PSA_Office__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>PSA_Branch</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PSA_Office__c</fullName>
        <label>PSA Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PSA_Office</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PlacesNew__c</fullName>
        <label>Places</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Places__c</fullName>
        <label>Places_old</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Postnatal_End_Date__c</fullName>
        <label>Postnatal End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Postnatal_Start_Date__c</fullName>
        <label>Postnatal Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Practitioner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Practitioner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Practitioner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Private__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Provisional__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Provisional</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Session_Count__c</fullName>
        <label>Session Count</label>
        <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <summarizedField>Session__c.Start__c</summarizedField>
        <summaryForeignKey>Session__c.Course__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Draft - Course setup is in progress
Confirmed - Course setup completed, can be shared with Website and start accepting bookings.
In Progress - Course has been started by practitioner, hence no changes to PSA assignment allowed
Completed - All the session of course have been completed by the practitioner.
Closed - PSA is happy to close the course
Cancelled - Course has been cancelled, no more updates.
Cancelling - PSA is aware they would cancel the course but they need to complete more actions such as transferring/cancelling already existing bookings on that course and other off the system actions 
Completed - All the session of course have been completed by the practitioner.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelling</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Group__c</fullName>
        <label>Target Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Booking_Cost__c</fullName>
        <label>Total Booking Cost</label>
        <summarizedField>Booking__c.Cost__c</summarizedField>
        <summaryForeignKey>Booking__c.Course__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Venue_Address__c</fullName>
        <description>Venue__r.BillingStreet &amp;BR()&amp;Venue__r.BillingState &amp;BR()&amp;Venue__r.BillingCity &amp;BR()&amp; Venue__r.BillingCountry</description>
        <formula>NULL</formula>
        <label>Venue Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Venue</label>
        <referenceTo>Venue__c</referenceTo>
        <relationshipLabel>Course</relationshipLabel>
        <relationshipName>Course</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Women_Only__c</fullName>
        <label>Women Only?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>CARE N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Type__c</columns>
        <columns>Fee__c</columns>
        <columns>Branch__c</columns>
        <columns>Status__c</columns>
        <columns>Venue__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Courses</fullName>
        <columns>NAME</columns>
        <columns>Practitioner__c</columns>
        <columns>Venue__c</columns>
        <columns>Course_Name__c</columns>
        <columns>Course_Type__c</columns>
        <columns>Start_Date__c</columns>
        <columns>Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>contains</operation>
        </filters>
        <label>My Courses</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>C{000000}</displayFormat>
        <label>Course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course</pluralLabel>
    <recordTypes>
        <fullName>Course</fullName>
        <active>true</active>
        <label>Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_Enquiry_PSA</fullName>
        <active>true</active>
        <label>Course Enquiry PSA</label>
    </recordTypes>
    <recordTypes>
        <fullName>Venue_Notcompulsary</fullName>
        <active>true</active>
        <description>when capacity psa login, he need to create courses with venue which is not mandatory</description>
        <label>New Course</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Capacity_Psa_validation_on_Status</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
ISPICKVAL(Status__c, &apos;Closed&apos;),
ISPICKVAL(Status__c, &apos;Cancelled&apos;),
ISPICKVAL(Status__c, &apos;In Progress&apos;)
)
 &amp;&amp; 

OR(
ISPICKVAL(PSA_Office__c, &quot;1C&quot;),ISPICKVAL(PSA_Office__c, &quot;2A&quot;),ISPICKVAL(PSA_Office__c, &quot;4D&quot;),ISPICKVAL(PSA_Office__c, &quot;3C&quot;)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>PSA Assignments can not be modified for the current status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Check_Numer_of_Places_against_Practition</fullName>
        <active>true</active>
        <description>Limit number of places on course to the number the practitioner is authorised to have</description>
        <errorConditionFormula>NOT(ISBLANK(Practitioner__r.Maximum_Clients_per_Course__c)) &amp;&amp;  Places__c &gt; Practitioner__r.Maximum_Clients_per_Course__c</errorConditionFormula>
        <errorDisplayField>Places__c</errorDisplayField>
        <errorMessage>Too many course places for the selected practitioner</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_End_date</fullName>
        <active>true</active>
        <description>Validation rule to make sure that end date is captured for Antenatal Course</description>
        <errorConditionFormula>AND(ISPICKVAL(Course_Name__c, &quot;Antenatal&quot;),ISNULL(End_Date__c))</errorConditionFormula>
        <errorDisplayField>End_Date__c</errorDisplayField>
        <errorMessage>Course End Date field cannot be left blank for Antenatal Course</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Start_date</fullName>
        <active>true</active>
        <description>Validation rule to make sure that start date is captured for Post Natal Courses</description>
        <errorConditionFormula>AND(ISPICKVAL(Course_Name__c, &quot;Postnatal&quot;),ISNULL(Start_Date__c))</errorConditionFormula>
        <errorDisplayField>Start_Date__c</errorDisplayField>
        <errorMessage>Course Start Date field cannot be left blank for Post Natal Courses</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Course_Sub_Category</fullName>
        <active>true</active>
        <description>Sub Category field should be dependent Picklist of Category and required if Category is selected</description>
        <errorConditionFormula>ISPICKVAL(Course_Sub_Category__c, &apos;None&apos;) || ISPICKVAL(Course_Category__c , &apos;None&apos;)</errorConditionFormula>
        <errorDisplayField>Course_Sub_Category__c</errorDisplayField>
        <errorMessage>Required field is missing: Course Sub Category; Course Category</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PSA_Assignments</fullName>
        <active>true</active>
        <description>if course is in completed or closed status, it should not be editable</description>
        <errorConditionFormula>OR(
ISPICKVAL(Status__c, &apos;Closed&apos;),
ISPICKVAL(Status__c, &apos;Completed&apos;)
)
 &amp;&amp; 
OR(
Ischanged(PSAOffice__c )
)</errorConditionFormula>
        <errorDisplayField>PSAOffice__c</errorDisplayField>
        <errorMessage>PSA Office field cannot be updated when the Status is set to Closed or Completed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Reason_Mandatory_for_Cancelled_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF( AND( ISPICKVAL( Status__c , &apos;Cancelled&apos;) , ISPICKVAL( Cancellation_Reason__c, &apos;&apos; ) ) , true, false)</errorConditionFormula>
        <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
        <errorMessage>Please provide the reason for Cancellation when Status as Cancelled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>validation_for_Fee_field_in_Course</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Fee__c )</errorConditionFormula>
        <errorDisplayField>Fee__c</errorDisplayField>
        <errorMessage>Please fill Fee field</errorMessage>
    </validationRules>
</CustomObject>